cargo_check_final_rbac_2.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-core v0.1.0 (/app/crates/auth-core)
warning: unused import: `User`
 --> crates/auth-core/src/services/authorization/policy.rs:3:27
  |
3 | use crate::models::{Role, User};
  |                           ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::error::AuthError`
 --> crates/auth-core/src/services/authorization/policy.rs:4:5
  |
4 | use crate::error::AuthError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `UpdateRoleRequest`
 --> crates/auth-core/src/services/authorization/service.rs:4:46
  |
4 | use crate::models::{Role, CreateRoleRequest, UpdateRoleRequest};
  |                                              ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> crates/auth-core/src/services/authorization/service.rs:36:25
   |
36 |             updated_at: chrono::Utc::now(),
   |                         ^^^^^^^^^^^^^^^^^^ expected `Option<DateTime<Utc>>`, found `DateTime<Utc>`
   |
   = note: expected enum `std::option::Option<chrono::DateTime<_>>`
            found struct `chrono::DateTime<_>`
help: try wrapping the expression in `Some`
   |
36 |             updated_at: Some(chrono::Utc::now()),
   |                         +++++                  +

error[E0063]: missing fields `constraints`, `is_system_role`, `metadata` and 3 other fields in initializer of `role::Role`
  --> crates/auth-core/src/services/authorization/service.rs:29:20
   |
29 |         let role = Role {
   |                    ^^^^ missing `constraints`, `is_system_role`, `metadata` and 3 other fields

warning: unused variable: `role`
  --> crates/auth-core/src/services/authorization/policy.rs:32:56
   |
32 |         let has_permission = context.roles.iter().any(|role| {
   |                                                        ^^^^ help: if this is intentional, prefix it with an underscore: `_role`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `permission_code`
  --> crates/auth-core/src/services/authorization/policy.rs:27:9
   |
27 |         permission_code: &str,
   |         ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_permission_code`

Some errors have detailed explanations: E0063, E0308.
For more information about an error, try `rustc --explain E0063`.
warning: `auth-core` (lib) generated 5 warnings
error: could not compile `auth-core` (lib) due to 2 previous errors; 5 warnings emitted
